Add Dirk integration
