# backend/foods/serializers.py
@@ -1,71 +1,42 @@
-import logging
-from typing import Final
+from typing import Any
 
 from django.db import transaction
-from integrations.usda_client import USDAFood, USDAFoodNutrient
 from nutrients.models import Nutrient
+from nutrients.serializers import NutrientBriefSerializer
 from rest_framework import serializers
 from tags.serializers import TagSerializer
 from units.models import Unit
+from units.serializers import UnitBriefSerializer
 
 from .models import Food, FoodNutrient, FoodTag
 
-logger = logging.getLogger(__name__)
-
-
-class FoodTagSerializer(serializers.ModelSerializer):
-    class Meta:
-        model = FoodTag
-        fields = [
-            "id",
-            "name",
-        ]
-
 
 class FoodNutrientSerializer(serializers.ModelSerializer):
+    nutrient = NutrientBriefSerializer(read_only=True)
     nutrient_id = serializers.PrimaryKeyRelatedField(
         queryset=Nutrient.objects.all(),
         source="nutrient",
-    )
-
-    nutrient_name = serializers.CharField(
-        source="nutrient.name",
-        read_only=True,
-    )
-
-    nutrient_unit = serializers.CharField(
-        source="nutrient.unit",
-        read_only=True,
+        write_only=True,
     )
 
     class Meta:
         model = FoodNutrient
         fields = [
+            "nutrient",
             "nutrient_id",
-            "nutrient_name",
-            "nutrient_unit",
             "amount",
         ]
 
 
 class FoodSerializer(serializers.ModelSerializer):
-    serving = serializers.FloatField()
-
+    unit = UnitBriefSerializer(read_only=True)
     unit_id = serializers.PrimaryKeyRelatedField(
         queryset=Unit.objects.all(),
         source="unit",
+        write_only=True,
     )
 
-    unit_name = serializers.CharField(
-        source="unit.name",
-        read_only=True,
-    )
-
-    tags = TagSerializer(
-        many=True,
-        read_only=True,
-    )
-
+    tags = TagSerializer(many=True, read_only=True)
     tag_ids = serializers.PrimaryKeyRelatedField(
         many=True,
         queryset=FoodTag.objects.all(),
@@ -75,107 +46,57 @@ class FoodSerializer(serializers.ModelSerializer):
     )
 
     nutrients = FoodNutrientSerializer(
+        source="food_nutrients",
         many=True,
         required=False,
-        source="food_nutrients",
+    )
+
+    external_source = serializers.CharField(
+        required=False,
+        allow_null=True,
+    )
+    external_id = serializers.CharField(
+        required=False,
+        allow_null=True,
     )
 
     class Meta:
         model = Food
-
         fields = [
             "id",
             "name",
             "serving",
+            "unit",
             "unit_id",
-            "unit_name",
             "barcode",
             "brand",
             "description",
             "is_favorite",
-            "usda_fdc_id",
+            "external_source",
+            "external_id",
             "tags",
             "tag_ids",
             "nutrients",
         ]
+        read_only_fields = ["id"]
 
-        read_only_fields = [
-            "id",
-            "unit_name",
-        ]
+    def validate(self, attrs: dict[str, Any]) -> dict[str, Any]:
+        request = self.context["request"]
 
-    def validate(self, attrs):
-        request = self.context.get("request")
-
-        if request and "tags" in attrs:
-            for tag in attrs["tags"]:
-                if tag.user != request.user:
-                    raise serializers.ValidationError(
-                        {"tag_ids": "You cannot use another user's tags."}
-                    )
+        for tag in attrs.get("tags", []):
+            if tag.user != request.user:
+                raise serializers.ValidationError(
+                    {"tag_ids": "You cannot use another user's tags."}
+                )
 
         return attrs
 
-    def to_representation(self, instance):
-        if isinstance(instance, USDAFood):
-            return self._serialize_usda_food(instance)
-
-        return super().to_representation(instance)
-
-    def _serialize_usda_food(self, food: USDAFood):
-        try:
-            GRAM: Final = Unit.objects.get(name="Gram")
-        except Unit.DoesNotExist:
-            raise ValueError("Required unit 'Gram' does not exist.")
-
-        return {
-            "id": None,
-            "name": food.name,
-            "serving": food.serving,
-            "unit_id": GRAM.id,
-            "unit_name": GRAM.name,
-            "barcode": None,
-            "brand": food.brand,
-            "description": food.description,
-            "is_favorite": False,
-            "usda_fdc_id": food.fdc_id,
-            "tags": [],
-            "nutrients": self._serialize_usda_nutrients(
-                food.food_nutrients,
-            ),
-        }
-
-    def _serialize_usda_nutrients(
+    def _set_nutrients(
         self,
-        usda_nutrients: list[USDAFoodNutrient],
-    ):
-        usda_nutrient_map = {
-            nutrient.number: nutrient
-            for nutrient in usda_nutrients
-            if nutrient.number is not None
-        }
-
-        global_nutrients = {
-            nutrient.usda_nutrient_number: nutrient
-            for nutrient in Nutrient.objects.filter(
-                usda_nutrient_number__in=usda_nutrient_map.keys(),
-            )
-        }
-
-        return [
-            {
-                "nutrient_id": nutrient.id,
-                "nutrient_name": nutrient.name,
-                "nutrient_unit": nutrient.unit,
-                "amount": usda_nutrient_map[nutrient.usda_nutrient_number].value,
-            }
-            for nutrient in global_nutrients.values()
-        ]
-
-    def _set_nutrients(self, food, nutrients):
-        FoodNutrient.objects.filter(
-            food=food,
-        ).delete()
+        food: Food,
+        nutrients: list[dict[str, Any]],
+    ) -> None:
+        FoodNutrient.objects.filter(food=food).delete()
 
         FoodNutrient.objects.bulk_create(
             [
@@ -189,48 +110,23 @@ class FoodSerializer(serializers.ModelSerializer):
         )
 
     @transaction.atomic
-    def create(self, validated_data):
-        nutrients = validated_data.pop(
-            "food_nutrients",
-            [],
-        )
+    def create(self, validated_data: dict[str, Any]) -> Food:
+        nutrients = validated_data.pop("food_nutrients", [])
+        tags = validated_data.pop("tags", [])
 
-        tags = validated_data.pop(
-            "tags",
-            [],
-        )
-
-        food = Food.objects.create(
-            **validated_data,
-        )
-
+        food = Food.objects.create(**validated_data)
         food.tags.set(tags)
-
-        self._set_nutrients(
-            food,
-            nutrients,
-        )
+        self._set_nutrients(food, nutrients)
 
         return food
 
     @transaction.atomic
-    def update(self, instance, validated_data):
-        nutrients = validated_data.pop(
-            "food_nutrients",
-            None,
-        )
-
-        tags = validated_data.pop(
-            "tags",
-            None,
-        )
+    def update(self, instance: Food, validated_data: dict[str, Any]) -> Food:
+        nutrients = validated_data.pop("food_nutrients", None)
+        tags = validated_data.pop("tags", None)
 
         for attr, value in validated_data.items():
-            setattr(
-                instance,
-                attr,
-                value,
-            )
+            setattr(instance, attr, value)
 
         instance.save()
 
@@ -238,9 +134,6 @@ class FoodSerializer(serializers.ModelSerializer):
             instance.tags.set(tags)
 
         if nutrients is not None:
-            self._set_nutrients(
-                instance,
-                nutrients,
-            )
+            self._set_nutrients(instance, nutrients)
 
         return instance
