# backend/integrations/serializers.py
@@ -2,19 +2,20 @@ from foods.serializers import FoodSerializer
 from rest_framework import serializers
 
 
-class USDAFoodSearchSerializer(serializers.Serializer):
-    term = serializers.CharField(
-        max_length=100,
+class IntegrationFoodSerializer(FoodSerializer):
+    class Meta(FoodSerializer.Meta):
+        fields = [
+            *FoodSerializer.Meta.fields,
+            "external_source",
+            "external_id",
+        ]
+
+
+class FoodIntegrationAddSerializer(serializers.Serializer):
+    service = serializers.ChoiceField(
+        choices=[
+            ("Dirk", "Dirk"),
+            ("USDA", "USDA"),
+        ],
     )
-
-
-class USDAFoodSearchResponseSerializer(serializers.Serializer):
-    foods = FoodSerializer(
-        many=True,
-    )
-
-
-class USDASaveSerializer(serializers.Serializer):
-    fdc_id = serializers.IntegerField(
-        min_value=1,
-    )
+    external_id = serializers.CharField()
