# backend/units/serializers.py
@@ -3,6 +3,18 @@ from rest_framework import serializers
 from .models import Unit
 
 
+class UnitBriefSerializer(serializers.ModelSerializer):
+    """
+    A compact unit representation.
+    """
+
+    class Meta:
+        model = Unit
+        fields = ["id", "name", "abbreviation"]
+
+
+# TODO: In the future, split off visibility into a visibility class.
+# This is quite messy.
 class UnitSerializer(serializers.ModelSerializer):
     class Meta:
         model = Unit
